# Algo-et-structure

./: .gitignore  CMakeLists.txt  ReadMe.md
ListTD/: Lists.c  Lists.h
TD2/: Insertions.c  Insertions.h
TD3/: fibonaci.c  fibonaci.h  main.c
TD4/: List.h  pgcd.c  pgcd.h
TP1/: Sorting.c  Sorting.h  main.c
TP1_and_2/: Sorting.c  Sorting.h  main.c
TP2/: Sorting.c  Sorting.h  data.txt  main.c
Tools/: FileReading.c  FileReading.h  Tools.c  Tools.h  Types.h  test.txt
gtktest/: main.c
